mdmCeneveo/src/objects/Plant_Products__c.object
<CustomObject>
    <fields>
        <fullName>Plant_Product_Name_formula__c</fullName>
        <formula>Plant__r.Name +&quot;-&quot;+ Product__r.Name</formula>
        <label>Plant Product Name formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <label>Plant</label>
        <referenceTo>Plant__c</referenceTo>
        <relationshipLabel>Plant Products</relationshipLabel>
        <relationshipName>Plant_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>TEXT(Product__r.Family)</formula>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Plant Products</relationshipLabel>
        <relationshipName>Plant_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Plant Product</label>
    <nameField>
        <label>Plant Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plant Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>